db/1.14/modules/ROOT/pages/database-connector-examples.adoc
= Database Connector Examples - Mule 4
:page-aliases: connectors::db/db-connector-bulk-ops-ref.adoc, connectors::db/database-connector-examples.adoc, :page-aliases: connectors::db/database-connector-design-center.adoc

Anypoint Connector for Database (Database Connector) examples help you configure database connections, query a database, execute stored procedures, execute DDL statements, execute scripts, execute database transactions, use bulk operations, and configure custom data types:

* xref:database-connector-connection.adoc[Configure a Database Connection] +
Connect to both popular and generic database. Additionally, configure the connector to connect to a global data source, set a JDBC driver, configure connection pooling, and connection to an Oracle database with TNS.
* xref:database-connector-connection-secure-oracle.adoc[Configure an Oracle TLS Database Connection] +
Connect to Oracle through a secure TPC (TCPS) tunnel using multiple secure Oracle connection levels and Mule's TLS configuration.
* xref:database-connector-driver-configuration.adoc[Configure Driver Visibility using Mule Maven Plugin] +
Use the Mule Maven Plugin to configure properly the driver classes visibility.
* xref:database-connector-select.adoc[Query a Database] +
Configure the *Select* operation to query data from a database.
* xref:database-connector-query-single.adoc[Query a Single Record from a Database] +
Configure the *Query single* operation in a Mule application that retrieves books information from a table in a MySQL database.
* xref:database-insert-update-delete.adoc[Insert, Update, and Delete Data] +
Configure the *Insert*, *Update* and *Delete* operations to manage data.
* xref:database-execute-bulk.adoc[Bulk Insert, Bulk Update, and Bulk Delete Data from a Database] +
Configure the *Bulk insert*, *Bulk update*, and *Bulk delete* operations to manage date in bulk.
* xref:database-stored-procedure.adoc[Execute Stored Procedures] +
Configure the *Stored Procedure* operation to combine `input`, `output`, and `input-output` parameters. Additionally, configure dates on stored procedures.
* xref:database-connector-udt-stored-procedure.adoc[Call an Oracle Stored Procedure That Uses UDTs] +
Configure the *Stored procedure* operation to call an Oracle database stored procedure that uses UDTs for its input and output parameters. Additionally, use `prepareStruct` and `prepareArray` DataWeave functions to map application data to your custom types.
* xref:database-connector-execute-ddl.adoc[Execute DDL Statements] +
Configure the *Execute DDL* operation to execute DDL statements that create or modify data within tables or other data structures.
* xref:database-execute-script.adoc[Execute Scripts] +
Configure the *Execute Script* operation to execute a script as a single statement.
* xref:database-configure-data-types.adoc[Configure Database Data Types] +
Configure custom data types to use when connected to a particular connection provider.
* xref:database-connector-transactions.adoc[Configure Database Transactions] +
Execute database operations in the context of a transaction.
* xref:database-insert-large-clob.adoc[Insert large file content into a table] +
Configure a Mule app flow to read and insert a large file into a table.
* xref:database-connector-xa-transactions.adoc[Using XA Transactions in Database Connector] +
Configure the *Use XA Transactions* field in the Database Connector global configuration so the datasource supports Extended Architecture Transactions (XA Transactions).
* xref:database-configure-usebulkcopy.adoc[Configure Use Bulk Copy for Database Connector SQL Server Connection] +
Configure the Use Bulk Copy to do bulk copy operations when executing batch insert operations.
* xref:database-connector-integratedsecurity.adoc[Configure Azure Active Directory Authentication for MS SQL Server] +
Configure Azure Active Directory Authentication for MS SQL Server using the Database Connector via the `IntegratedSecurity` parameter.
* xref:database-connector-input-output-parameters.adoc[Configuring Input and Output Parameters for Stored Procedures] +
Configure input or output parameters for the *Stored procedure* operation of Anypoint Connector for Database (Database Connector) to specify the parameters that a stored procedure uses.

== See Also

https://help.mulesoft.com[MuleSoft Help Center]
